feat: use ollama with mistral

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,11 @@ services:
       - ./backend:/backend
     environment:
       REDIS_URL: "redis://opengpts-redis:6379"
+      OLLAMA_URL: "http://host.docker.internal:11434"
     command:
       - --reload
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   frontend:
     container_name: opengpts-frontend
     build:
